Add github action workflow

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -24,3 +24,6 @@ jobs:
   #Kiểm tra xem có file readme không
     - name: Checkfiles
       run: ls -la
+  #Sử dụng lệnh make
+    - name: Test make
+      run: make --version
